--- a/project.json
+++ b/project.json
@@ -15,7 +15,7 @@
         "main": "./src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "./tsconfig.app.json",
-        "assets": ["./src/favicon.ico", "./src/assets"],
+        "assets": ["./src/favicon.ico", "./src/assets", "./src/netlify.toml"],
         "styles": ["./src/styles.scss"],
         "scripts": []
       },
